--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: meca_test
+  database: livra_test
 
 production:
   <<: *default
